# pypi-simple

./: README.md  gen_pypi.py  index.html  pyproject.toml
.github/workflows/: generate.yaml
docs/: index.html
docs/ortools/: index.html
input/: ortools.yaml
ortools/: index.html
pages/: index.html
