[tool.poetry]
name = "gen-pypi"
version = "0.1.0"
description = ""
authors = ["Jashandeep Sohi <jsohi@lco.global>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
PyYAML = "^6.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gen-pypi = "gen_pypi:main"
